--- a/source/styles/components/authorization.css
+++ b/source/styles/components/authorization.css
@@ -9,6 +9,7 @@
 	max-width: 683px;
 	padding-top: 100px;
 	width: 100%;
+	margin-bottom: 40px;
 }
 
 
@@ -18,6 +19,7 @@
 	margin: 0 auto;
 	max-width: 510px;
 	width: 100%;
+	margin-bottom: 40px;
 }
 
 .authorization__content {
