--- a/source/styles/base/fonts.css
+++ b/source/styles/base/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
 	font-family: 'FuturaPT';
 	font-weight: 700;
 	font-style: normal;
@@ -6,11 +6,11 @@
 		url('../fonts/FuturaPT-Bold.woff') format('woff2'),
 		url('../fonts/FuturaPT-Bold.woff2') format('woff');
 	font-display: swap;
-}
+} */
 
 @font-face {
 	font-family: 'FuturaPT';
-	font-weight: 300;
+	font-weight: 450;
 	font-style: normal;
 	src:
 		url('../fonts/FuturaPT-Book.woff2') format('woff2'),
@@ -18,7 +18,7 @@
 	font-display: swap;
 }
 
-@font-face {
+/* @font-face {
 	font-family: 'FuturaPT';
 	font-weight: 300;
 	font-style: normal;
@@ -26,9 +26,9 @@
 		url('../fonts/FuturaPT-Demi.woff2') format('woff2'),
 		url('../fonts/FuturaPT-Demi.woff') format('woff');
 	font-display: swap;
-}
+} */
 
-@font-face {
+/* @font-face {
 	font-family: 'FuturaPT';
 	font-weight: 100;
 	font-style: normal;
@@ -36,9 +36,9 @@
 		url('../fonts/FuturaPT-Light.woff2') format('woff2'),
 		url('../fonts/FuturaPT-Light.woff') format('woff');
 	font-display: swap;
-}
+} */
 
-@font-face {
+/* @font-face {
 	font-family: 'FuturaPT';
 	font-weight: 500;
 	font-style: normal;
@@ -46,9 +46,9 @@
 		url('../fonts/FuturaPT-Medium.woff2') format('woff2'),
 		url('../fonts/FuturaPT-Medium.woff') format('woff');
 	font-display: swap;
-}
+} */
 
-@font-face {
+/* @font-face {
 	font-family: 'Inter';
 	font-weight: 400;
 	font-style: normal;
@@ -56,9 +56,9 @@
 		url('../fonts/Inter-Regular.woff2') format('woff2'),
 		url('../fonts/Inter-Regular.woff') format('woff');
 	font-display: swap;
-}
+} */
 
-@font-face {
+/* @font-face {
 	font-family: 'NeueMachina';
 	font-weight: 100;
 	font-style: normal;
@@ -66,7 +66,7 @@
 		url('../fonts/NeueMachina-Light.woff2') format('woff2'),
 		url('../fonts/NeueMachina-Light.woff') format('woff');
 	font-display: swap;
-}
+} */
 
 @font-face {
 	font-family: 'NeueMachina';
