--- a/source/styles/components/link-button.css
+++ b/source/styles/components/link-button.css
@@ -1,6 +1,9 @@
-.btnText {
+.link-button {
 	background-color: rgba(255, 255, 255, 1);
 	border-radius: 50px;
 	color: rgba(33, 41, 67, 1);
 	padding: 9px 43px;
+	border: none;
+	cursor: pointer;
+
 }
