--- a/source/styles/components/button.css
+++ b/source/styles/components/button.css
@@ -1,9 +1,9 @@
-.link-button {
+.button {
 	background-color: rgba(255, 255, 255, 1);
 	border-radius: 50px;
 	color: rgba(33, 41, 67, 1);
 	padding: 9px 43px;
 	border: none;
-	cursor: pointer;
-
+	cursor: auto;
+	display: inline-block;
 }
