--- a/source/styles/components/button.css
+++ b/source/styles/components/button.css
@@ -4,6 +4,9 @@
 	color: rgba(33, 41, 67, 1);
 	padding: 9px 43px;
 	border: none;
-	cursor: pointer;
 	display: inline-block;
+}
+
+.button:hover {
+	cursor: pointer;
 }
