--- a/source/styles/base/fonts.css
+++ b/source/styles/base/fonts.css
@@ -58,15 +58,15 @@
 	font-display: swap;
 } */
 
-/* @font-face {
+@font-face {
 	font-family: 'NeueMachina';
-	font-weight: 100;
+	font-weight: 300;
 	font-style: normal;
 	src:
 		url('../fonts/NeueMachina-Light.woff2') format('woff2'),
 		url('../fonts/NeueMachina-Light.woff') format('woff');
 	font-display: swap;
-} */
+}
 
 @font-face {
 	font-family: 'NeueMachina';
