--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -15,6 +15,8 @@
 @import "components/list.css";
 @import "components/link.css";
 @import "components/text.css";
+@import "components/card.css";
 
 @import "components/auth.css";
+@import "components/interesting.css";
 @import "components/footer.css";
