section interesting end

--- a/source/styles/base/fonts.css
+++ b/source/styles/base/fonts.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
 	font-family: 'FuturaPT';
 	font-weight: 700;
 	font-style: normal;
@@ -6,7 +6,7 @@
 		url('../fonts/FuturaPT-Bold.woff') format('woff2'),
 		url('../fonts/FuturaPT-Bold.woff2') format('woff');
 	font-display: swap;
-} */
+}
 
 @font-face {
 	font-family: 'FuturaPT';
@@ -38,7 +38,7 @@
 	font-display: swap;
 } */
 
-/* @font-face {
+@font-face {
 	font-family: 'FuturaPT';
 	font-weight: 500;
 	font-style: normal;
@@ -46,7 +46,7 @@
 		url('../fonts/FuturaPT-Medium.woff2') format('woff2'),
 		url('../fonts/FuturaPT-Medium.woff') format('woff');
 	font-display: swap;
-} */
+}
 
 /* @font-face {
 	font-family: 'Inter';
