--- a/source/styles/components/link.css
+++ b/source/styles/components/link.css
@@ -11,28 +11,58 @@
 	font-family: 'Futura PT';
 	font-weight: 450;
 	background-color: #60AD76;
-	opacity: 0.5;
+	opacity: 0.9;
 	border-radius: 50px;
+	position: relative;
+}
+
+.link_level_new::before {
+	content: " ";
+	background-position: center center;
+	background-repeat: no-repeat;
+	height: 5px;
+	position: absolute;
+	width: 5px;
+	top: 50%;
+	left: 15%;
+	transform: translateY(-50%);
+	background-color: #8CFCE2;
+	border-radius: 50%;
 }
 
 .link_level_advanced {
-		padding: 5px 21px 7px 29px;
-		font-size: 14px;
-		color: rgba(255, 255, 255, 1);
-		font-family: 'Futura PT';
-		font-weight: 450;
-		background-color: #B18E1B;
-		opacity: 0.5;
-		border-radius: 50px;
+	padding: 5px 21px 7px 29px;
+	font-size: 14px;
+	color: rgba(255, 255, 255, 1);
+	font-family: 'Futura PT';
+	font-weight: 450;
+	background-color: #B18E1B;
+	opacity: 0.9;
+	border-radius: 50px;
+	position: relative;
+}
+
+.link_level_advanced::before {
+	content: " ";
+	background-position: center center;
+	background-repeat: no-repeat;
+	height: 5px;
+	position: absolute;
+	width: 5px;
+	top: 50%;
+	left: 15%;
+	transform: translateY(-50%);
+	background-color: #FFC017;
+	border-radius: 50%;
 }
 
 .link_level_pro {
-		padding: 5px 21px 7px 29px;
-		font-size: 14px;
-		color: rgba(255, 255, 255, 1);
-		font-family: 'Futura PT';
-		font-weight: 450;
-		background-color: #602E3D;
-		opacity: 0.5;
-		border-radius: 50px;
+	padding: 5px 21px 7px 29px;
+	font-size: 14px;
+	color: rgba(255, 255, 255, 1);
+	font-family: 'Futura PT';
+	font-weight: 450;
+	background-color: #602E3D;
+	opacity: 0.8;
+	border-radius: 50px;
 }
