--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -19,4 +19,5 @@
 
 @import "components/auth.css";
 @import "components/interesting.css";
+@import "components/content.css";
 @import "components/footer.css";
