--- a/source/styles/components/interesting.css
+++ b/source/styles/components/interesting.css
@@ -1,19 +1,80 @@
-.interesting {
-	padding: 50px 0 50px;
-}
+	@media (max-width: 575px) {
 
-.interesting__top {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 35px;
-}
+		.interesting {
+			padding: 30px 0;
+		}
 
-.interesting__title {
-	font-weight: 600;
-}
+		.interesting__top {
+			display: flex;
+			justify-content: center;
+			margin-bottom: 18px;
+			gap: 50px;
+		}
 
-.interesting__content {
-	display: flex;
-	gap: 30px;
-	justify-content: space-between;
-}
+		.interesting__title {
+			font-weight: 600;
+			font-size: 22px;
+			max-width: 145px;
+			text-align: left;
+		}
+
+		.interesting__button {
+			font-size: 14px;
+			padding: 10px 19px;
+		}
+
+		.interesting__content {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 10px;
+			margin-bottom: 50px;
+		}
+
+		.interesting__line {
+			background-color: #fff;
+			width: 100%;
+			height: 1px;
+		}
+
+		.card__img_media_decktop {
+			display: none;
+		}
+
+	}
+
+
+
+
+
+
+
+
+
+
+
+	@media (min-width: 1220px) {
+		.interesting {
+			padding: 50px 0;
+		}
+
+		.interesting__top {
+			display: flex;
+			justify-content: space-between;
+			margin-bottom: 35px;
+		}
+
+		.interesting__title {
+			font-weight: 600;
+		}
+
+		.interesting__content {
+			display: flex;
+			gap: 30px;
+			justify-content: space-between;
+		}
+
+		.card__img_media_mobail {
+			display: none;
+		}
+	}
