--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -16,6 +16,7 @@
 @import "components/link.css";
 @import "components/text.css";
 @import "components/card.css";
+@import "components/discus.css";
 
 @import "components/auth.css";
 @import "components/interesting.css";
