--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -25,4 +25,5 @@
 @import "components/content/content.css";
 @import "components/discus/discus.css";
 @import "components/interesting/interesting.css";
+@import "components/education/education.css";
 @import "components/footer/footer.css";
