--- a/source/styles/components/content/content.css
+++ b/source/styles/components/content/content.css
@@ -11,6 +11,7 @@
 .content__text {
 	text-align: left;
 	margin-bottom: 35px;
+	max-width: 400px;
 }
 
 .content__text p:not(:last-child) {
@@ -18,7 +19,15 @@
 }
 
 .content {
-	padding: 50px 15px
+	padding: 50px 15px;
+
+}
+
+@media (max-width: 1220px) {
+	.content__wrap {
+		max-width: 325px;
+		margin: 0 auto;
+	}
 }
 
 .content__top {
@@ -148,7 +157,7 @@
 		max-width: 597px;
 	}
 
-.content h2 {
+	.content h2 {
 		font-size: 42px;
 		max-width: 597px;
 	}
@@ -164,6 +173,10 @@
 		margin-bottom: 40px;
 	}
 
+	.content__text {
+		max-width: 634px;
+		font-size: 18px;
+	}
 
 	.content__card {
 		max-width: 634px;
@@ -197,10 +210,6 @@
 
 	.content__text_size_big {
 		font-size: 20px;
-	}
-
-	.content__text {
-		font-size: 18px;
 	}
 
 }
