--- a/source/styles/components/discus/discus.css
+++ b/source/styles/components/discus/discus.css
@@ -1,3 +1,11 @@
+@media (max-width: 1220px) {
+	.discus {
+		display: none;
+	}
+}
+
+
+
 @media (min-width: 1220px) {
 	.discus {
 		max-width: 462px;
@@ -71,4 +79,3 @@
 	}
 
 }
-
